--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "install": "^0.13.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "npm": "^11.4.2",
     "twilio": "^5.7.2"
   }
