--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "install": "^0.13.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.4",
     "npm": "^11.4.2",
     "twilio": "^5.7.2"
   }
