--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "npm": "^11.4.2",
-    "twilio": "^5.7.2"
+    "twilio": "^5.7.2",
+    "xlsx": "^0.18.5"
   }
 }
